[gd_scene load_steps=151 format=2]

[ext_resource path="res://Obi Wan/Salto/14.png" type="Texture" id=1]
[ext_resource path="res://Obi Wan/Caminar/2.png" type="Texture" id=2]
[ext_resource path="res://Obi Wan/Salto/11.png" type="Texture" id=3]
[ext_resource path="res://Obi Wan/Combo1/Ataque1/8.png" type="Texture" id=4]
[ext_resource path="res://Obi Wan/Salto/8.png" type="Texture" id=5]
[ext_resource path="res://Obi Wan/Salto/13.png" type="Texture" id=6]
[ext_resource path="res://Obi Wan/Combo1/Ataque1/7.png" type="Texture" id=7]
[ext_resource path="res://Obi Wan/Caminar/11.png" type="Texture" id=8]
[ext_resource path="res://Obi Wan/Combo1/Ataque1/4.png" type="Texture" id=9]
[ext_resource path="res://Obi Wan/Salto/1.png" type="Texture" id=10]
[ext_resource path="res://Obi Wan/Caminar/9.png" type="Texture" id=11]
[ext_resource path="res://Obi Wan/Caminar/12.png" type="Texture" id=12]
[ext_resource path="res://Obi Wan/Caminar/10.png" type="Texture" id=13]
[ext_resource path="res://Obi Wan/Salto/5.png" type="Texture" id=14]
[ext_resource path="res://Obi Wan/Salto/3.png" type="Texture" id=15]
[ext_resource path="res://Obi Wan/Salto/6.png" type="Texture" id=16]
[ext_resource path="res://Obi Wan/Salto/2.png" type="Texture" id=17]
[ext_resource path="res://Obi Wan/Caminar/13.png" type="Texture" id=18]
[ext_resource path="res://Obi Wan/Combo1/Ataque1/6.png" type="Texture" id=19]
[ext_resource path="res://Obi Wan/Salto/0.png" type="Texture" id=20]
[ext_resource path="res://Obi Wan/Caminar/8.png" type="Texture" id=21]
[ext_resource path="res://Obi Wan/Salto/7.png" type="Texture" id=22]
[ext_resource path="res://Obi Wan/Salto/4.png" type="Texture" id=23]
[ext_resource path="res://Obi Wan/Caminar/7.png" type="Texture" id=24]
[ext_resource path="res://Obi Wan/Combo1/Ataque1/3.png" type="Texture" id=25]
[ext_resource path="res://Obi Wan/Combo1/Ataque1/5.png" type="Texture" id=26]
[ext_resource path="res://Obi Wan/Combo1/Ataque1/1.png" type="Texture" id=27]
[ext_resource path="res://Obi Wan/Combo1/Ataque1/0.png" type="Texture" id=28]
[ext_resource path="res://Obi Wan/Caminar/3.png" type="Texture" id=29]
[ext_resource path="res://Obi Wan/Caminar/4.png" type="Texture" id=30]
[ext_resource path="res://Obi Wan/Caminar/5.png" type="Texture" id=31]
[ext_resource path="res://Obi Wan/Caminar/6.png" type="Texture" id=32]
[ext_resource path="res://Obi Wan/Combo1/Ataque1/2.png" type="Texture" id=33]
[ext_resource path="res://Obi Wan/Combo1/Ataque2/0.png" type="Texture" id=34]
[ext_resource path="res://Obi Wan/Combo1/Ataque2/2.png" type="Texture" id=35]
[ext_resource path="res://Obi Wan/Combo1/Ataque2/5.png" type="Texture" id=36]
[ext_resource path="res://Obi Wan/Combo1/Ataque2/1.png" type="Texture" id=37]
[ext_resource path="res://Obi Wan/Combo1/Ataque2/3.png" type="Texture" id=38]
[ext_resource path="res://Obi Wan/Combo1/Ataque2/4.png" type="Texture" id=39]
[ext_resource path="res://Obi Wan/Combo1/Ataque2/6.png" type="Texture" id=40]
[ext_resource path="res://Obi Wan/Combo1/Ataque2/8.png" type="Texture" id=41]
[ext_resource path="res://Obi Wan/Combo1/Ataque3/1.png" type="Texture" id=42]
[ext_resource path="res://Obi Wan/Combo1/Ataque3/2.png" type="Texture" id=43]
[ext_resource path="res://Obi Wan/Combo1/Ataque3/0.png" type="Texture" id=44]
[ext_resource path="res://Obi Wan/Combo1/Ataque3/7.png" type="Texture" id=45]
[ext_resource path="res://Obi Wan/Combo1/Ataque3/6.png" type="Texture" id=46]
[ext_resource path="res://Obi Wan/Combo1/Ataque2/7.png" type="Texture" id=47]
[ext_resource path="res://Obi Wan/Combo1/Ataque3/3.png" type="Texture" id=48]
[ext_resource path="res://Obi Wan/Combo1/Ataque3/4.png" type="Texture" id=49]
[ext_resource path="res://Obi Wan/Combo1/Ataque3/5.png" type="Texture" id=50]
[ext_resource path="res://Obi Wan/Combo2/Ataque1/1.png" type="Texture" id=51]
[ext_resource path="res://Obi Wan/Combo2/Ataque1/0.png" type="Texture" id=52]
[ext_resource path="res://Obi Wan/Combo2/Ataque1/2.png" type="Texture" id=53]
[ext_resource path="res://Obi Wan/Combo2/Ataque1/4.png" type="Texture" id=54]
[ext_resource path="res://Obi Wan/Combo2/Ataque1/5.png" type="Texture" id=55]
[ext_resource path="res://Obi Wan/Combo2/Ataque1/3.png" type="Texture" id=56]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/10.png" type="Texture" id=57]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/11.png" type="Texture" id=58]
[ext_resource path="res://Obi Wan/Combo2/Ataque1/8.png" type="Texture" id=59]
[ext_resource path="res://Obi Wan/Combo2/Ataque2/1.png" type="Texture" id=60]
[ext_resource path="res://Obi Wan/Combo2/Ataque1/10.png" type="Texture" id=61]
[ext_resource path="res://Obi Wan/Combo2/Ataque2/9.png" type="Texture" id=62]
[ext_resource path="res://Obi Wan/Combo2/Ataque2/5.png" type="Texture" id=63]
[ext_resource path="res://Obi Wan/Combo2/Ataque1/9.png" type="Texture" id=64]
[ext_resource path="res://Obi Wan/Combo2/Ataque2/6.png" type="Texture" id=65]
[ext_resource path="res://Obi Wan/Combo2/Ataque2/8.png" type="Texture" id=66]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/0.png" type="Texture" id=67]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/7.png" type="Texture" id=68]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/2.png" type="Texture" id=69]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/4.png" type="Texture" id=70]
[ext_resource path="res://Obi Wan/Combo2/Ataque2/4.png" type="Texture" id=71]
[ext_resource path="res://Obi Wan/Combo2/Ataque1/6.png" type="Texture" id=72]
[ext_resource path="res://Obi Wan/Combo2/Ataque1/7.png" type="Texture" id=73]
[ext_resource path="res://Obi Wan/Combo2/Ataque2/0.png" type="Texture" id=74]
[ext_resource path="res://Obi Wan/Combo2/Ataque2/7.png" type="Texture" id=75]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/1.png" type="Texture" id=76]
[ext_resource path="res://Obi Wan/Combo2/Ataque2/3.png" type="Texture" id=77]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/5.png" type="Texture" id=78]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/3.png" type="Texture" id=79]
[ext_resource path="res://Obi Wan/Combo2/Ataque2/2.png" type="Texture" id=80]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/6.png" type="Texture" id=81]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/8.png" type="Texture" id=82]
[ext_resource path="res://Obi Wan/Combo2/Ataque3/9.png" type="Texture" id=83]
[ext_resource path="res://Obi Wan/Estatico/0.png" type="Texture" id=84]
[ext_resource path="res://Obi Wan/Estatico/1.png" type="Texture" id=85]
[ext_resource path="res://Obi Wan/Estatico/3.png" type="Texture" id=86]
[ext_resource path="res://Obi Wan/Estatico/4.png" type="Texture" id=87]
[ext_resource path="res://Obi Wan/Combo1/Ataque2/9.png" type="Texture" id=88]
[ext_resource path="res://Audio/31.mp3" type="AudioStream" id=89]
[ext_resource path="res://Audio/Jump1.mp3" type="AudioStream" id=90]
[ext_resource path="res://Audio/1.mp3" type="AudioStream" id=91]
[ext_resource path="res://Audio/2.mp3" type="AudioStream" id=92]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=93]
[ext_resource path="res://Obi Wan/Bloqueo/2.png" type="Texture" id=94]
[ext_resource path="res://Obi Wan/Bloqueo/1.png" type="Texture" id=95]
[ext_resource path="res://Obi Wan/Bloqueo/0.png" type="Texture" id=96]

[sub_resource type="Animation" id=6]
resource_name = "Ataque1"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 28 ), ExtResource( 27 ), ExtResource( 33 ), ExtResource( 25 ), ExtResource( 9 ), ExtResource( 26 ), ExtResource( 19 ), ExtResource( 7 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Ataque2"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 34 ), ExtResource( 37 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 36 ), ExtResource( 40 ), ExtResource( 47 ), ExtResource( 41 ), ExtResource( 88 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Ataque3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 44 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 46 ), ExtResource( 45 ) ]
}

[sub_resource type="Animation" id=42]
resource_name = "Bloqueo"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 96 ), ExtResource( 95 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ), ExtResource( 94 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Caminar"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 18 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Combo1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 52 ), ExtResource( 51 ), ExtResource( 53 ), ExtResource( 56 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 59 ), ExtResource( 64 ), ExtResource( 61 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Combo2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 74 ), ExtResource( 60 ), ExtResource( 80 ), ExtResource( 77 ), ExtResource( 71 ), ExtResource( 63 ), ExtResource( 65 ), ExtResource( 75 ), ExtResource( 66 ), ExtResource( 62 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Combo3"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 67 ), ExtResource( 76 ), ExtResource( 69 ), ExtResource( 79 ), ExtResource( 70 ), ExtResource( 78 ), ExtResource( 81 ), ExtResource( 68 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 57 ), ExtResource( 58 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Estatico"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Salto"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 20 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 23 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Ataque1"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Ataque2"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Ataque3"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "Bloqueo"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Caminar"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Combo1"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Combo2"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Combo3"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Estatico"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Salto"

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/Ataque1/node = SubResource( 15 )
states/Ataque1/position = Vector2( 284, 76 )
states/Ataque2/node = SubResource( 16 )
states/Ataque2/position = Vector2( 546, 76 )
states/Ataque3/node = SubResource( 17 )
states/Ataque3/position = Vector2( 789, 76 )
states/Bloqueo/node = SubResource( 43 )
states/Bloqueo/position = Vector2( 1120, 651 )
states/Caminar/node = SubResource( 18 )
states/Caminar/position = Vector2( 825, 263 )
states/Combo1/node = SubResource( 19 )
states/Combo1/position = Vector2( 284, 456 )
states/Combo2/node = SubResource( 20 )
states/Combo2/position = Vector2( 546, 456 )
states/Combo3/node = SubResource( 21 )
states/Combo3/position = Vector2( 789, 456 )
states/Estatico/node = SubResource( 22 )
states/Estatico/position = Vector2( 546, 263 )
states/Salto/node = SubResource( 23 )
states/Salto/position = Vector2( 284, 263 )
transitions = [ "Estatico", "Salto", SubResource( 24 ), "Estatico", "Caminar", SubResource( 25 ), "Caminar", "Estatico", SubResource( 26 ), "Combo1", "Combo2", SubResource( 28 ), "Combo2", "Combo3", SubResource( 29 ), "Estatico", "Combo1", SubResource( 30 ), "Combo1", "Estatico", SubResource( 31 ), "Combo2", "Estatico", SubResource( 32 ), "Combo3", "Estatico", SubResource( 33 ), "Ataque1", "Ataque2", SubResource( 34 ), "Ataque2", "Ataque3", SubResource( 35 ), "Estatico", "Ataque1", SubResource( 36 ), "Ataque1", "Estatico", SubResource( 37 ), "Ataque2", "Estatico", SubResource( 38 ), "Ataque3", "Estatico", SubResource( 39 ), "Salto", "Estatico", SubResource( 40 ), "Ataque3", "Bloqueo", SubResource( 46 ), "Bloqueo", "Ataque3", SubResource( 47 ), "Bloqueo", "Ataque2", SubResource( 48 ), "Ataque2", "Bloqueo", SubResource( 49 ), "Ataque1", "Bloqueo", SubResource( 50 ), "Bloqueo", "Ataque1", SubResource( 51 ), "Estatico", "Bloqueo", SubResource( 52 ), "Bloqueo", "Estatico", SubResource( 53 ), "Combo3", "Bloqueo", SubResource( 54 ), "Bloqueo", "Combo3", SubResource( 55 ), "Combo2", "Bloqueo", SubResource( 56 ), "Bloqueo", "Combo2", SubResource( 57 ), "Combo1", "Bloqueo", SubResource( 58 ), "Bloqueo", "Combo1", SubResource( 59 ) ]
graph_offset = Vector2( 0, -125.389 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 16, 31.5 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 93 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1.5 )
scale = Vector2( 1, 0.94 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Ataque1 = SubResource( 6 )
anims/Ataque2 = SubResource( 7 )
anims/Ataque3 = SubResource( 8 )
anims/Bloqueo = SubResource( 42 )
anims/Caminar = SubResource( 3 )
anims/Combo1 = SubResource( 9 )
anims/Combo2 = SubResource( 10 )
anims/Combo3 = SubResource( 11 )
anims/Estatico = SubResource( 12 )
anims/RESET = SubResource( 4 )
anims/Salto = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 1, -0.5 )
shape = SubResource( 41 )

[node name="Sonidos" type="Node" parent="."]

[node name="Ataque1" type="AudioStreamPlayer2D" parent="Sonidos"]
stream = ExtResource( 91 )

[node name="Ataque2" type="AudioStreamPlayer2D" parent="Sonidos"]
stream = ExtResource( 92 )

[node name="Ataque3" type="AudioStreamPlayer2D" parent="Sonidos"]
stream = ExtResource( 89 )

[node name="Jump" type="AudioStreamPlayer2D" parent="Sonidos"]
stream = ExtResource( 90 )

[node name="RayWall" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )
cast_to = Vector2( 30, 0 )

[node name="RayEnemy" type="RayCast2D" parent="."]
position = Vector2( 0, -2 )
cast_to = Vector2( 20, 0 )
